fixed spacing between upload and capture images.

--- a/source/assets/styles/image-capture.css
+++ b/source/assets/styles/image-capture.css
@@ -31,6 +31,9 @@
 
 .form-field__options {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .form-field__options__input {
@@ -47,6 +50,7 @@
     content: 'Select Image';
     display: inline-block;
     background: var(--primary);
+    margin-bottom: 1rem;
     border-radius: 20px;
     padding: 1px 1rem;
     white-space: nowrap;
